@@ -542,7 +542,7 @@ special_defensive_bombard_rules = []
 special_zone_of_control_rules = []
 
 ; All human players in a hotseat game will share visibility
-share_visibility_in_hoseat = false
+share_visibility_in_hotseat = false
 
 share_wonders_in_hotseat = false
 
